# actix-mockall-sample

./: Cargo.toml  README.md
src/: email.rs  email_client.rs  lib.rs  main.rs  settings.rs  smtp_client.rs  startup.rs
tests/api/: email.rs  helpers.rs  main.rs
