[package]
name = "actix-mockall-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockall = { version = "0.11", features = ["nightly"] }

tracing = "0.1"
log = "0.4"
env_logger = "0.10"
once_cell = "1"

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.11"
mockall = { version = "0.11", features = ["nightly"]}